--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "adb-filesystem",
 	"displayName": "ADB File System",
 	"description": "file system for connected android devices, using adb",
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"publisher": "MakotoHamanaka",
 	"engines": {
 		"vscode": "^1.42.0"
@@ -35,6 +35,14 @@
 					"when": "workbenchState != workspace"
 				}
 			]
+		},
+		"configuration": {
+			"properties": {
+				"adb-filesystem.basePath": {
+					"type": "string",
+					"default": "/sdcard"
+				}
+			}
 		}
 	},
 	"scripts": {
